--- a/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
@@ -133,25 +133,18 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Assign roles</h1>
-        <button type="button" #closebutton class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <ng-container *ngFor="let role of unAssignedPartyTypes">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" (click)="onAssignRole(role)">
-            <label class="form-check-label" for="inlineRadio1">
-              {{ role.partyTypeName }}
+            <input class="form-check-input" type="radio" (click)="onAssignRole(role)">
+            <label class="form-check-label">
+              {{ role?.partyTypeName }}
             </label>
           </div>
         </ng-container>
       </div>
-      <!-- <div class="modal-footer">
-        <button type="button"
-        class="btn btn-secondary" data-bs-dismiss="modal"
-        (click)="getUnAssignedRoles()"
-        >Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div> -->
     </div>
   </div>
 </div>
