--- a/src/app/features/entities/components/client/new-client/new-client.component.html
+++ b/src/app/features/entities/components/client/new-client/new-client.component.html
@@ -20,13 +20,13 @@
               <div class="col-sm-12">
                 <div class="mb-2">
                   <div class="form-check form-check-inline">
-                    <input 
-                      class="form-check-input" 
-                      type="radio" 
-                      name="userType" 
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="userType"
                       id="individual"
-                      value="I" 
-                      checked 
+                      value="I"
+                      checked
                       (click)="selectUserType($event)"
                     >
                     <label class="form-check-label" for="individual">
@@ -34,12 +34,12 @@
                     </label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input 
-                      class="form-check-input" 
-                      type="radio" 
-                      name="userType" 
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="userType"
                       id="corporate"
-                      value="C" 
+                      value="C"
                       (click)="selectUserType($event)"
                     >
                     <label class="form-check-label" for="corporate">
@@ -53,8 +53,8 @@
                 <label for="clientTypeId" class="label col-form-label">
                   {{ 'entities.client' | translate | titlecase }} {{ 'entities.type' | translate | titlecase }}
                 </label>
-                <select 
-                  class="form-select"  
+                <select
+                  class="form-select"
                   formControlName="clientTypeId"
                   [ngClass]="{ 'is-invalid': f['clientTypeId']?.invalid && (f['clientTypeId']?.dirty || f['clientTypeId']?.touched) }"
                 >
@@ -363,7 +363,7 @@
                   [ngClass]="{ 'is-invalid': f['contact_details']['controls']['channel']['invalid']
                   && (f['contact_details']['controls']['channel']['dirty']
                   || f['contact_details']['controls']['channel']['touched']) }">
-                    <option value="" disabled selected>{{ 'entities.id_number' | translate }}</option>
+                    <option value="" disabled selected>{{ 'entities.select_channel' | translate }}</option>
                     <option value="sms" aria-selected="true">{{ 'entities.sms' | translate }}</option>
                     <option value="email">{{ 'entities.email' | translate }}</option>
                   </select>
