--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.css
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.css
@@ -33,3 +33,12 @@
     height: 30px;
     border-radius: 4px;
 }
+.more {
+    color: #00529B;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration-line: underline;
+}
